--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "prettier": "^3.2.5",
-    "turbo": "^2.0.12",
-    "typescript": "^5.4.5"
+    "prettier": "3.2.5",
+    "turbo": "2.0.12",
+    "typescript": "5.4.5"
   },
   "packageManager": "pnpm@8.15.6",
   "engines": {
