--- a/applications/backend/package.json
+++ b/applications/backend/package.json
@@ -13,20 +13,26 @@
   "dependencies": {
     "@nestjs/common": "10.0.0",
     "@nestjs/core": "10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.0.0",
+    "@paralleldrive/cuid2": "2.2.2",
+    "bcryptjs": "2.4.3",
+    "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "reflect-metadata": "0.2.0",
     "rxjs": "7.8.1"
   },
   "devDependencies": {
-    "@variant/typescript-config": "workspace:*",
-    "@variant/eslint-config": "workspace:*",
     "@nestjs/cli": "10.0.0",
     "@nestjs/schematics": "10.0.0",
     "@nestjs/testing": "10.0.0",
+    "@types/bcryptjs": "2.4.6",
     "@types/express": "4.17.17",
     "@types/jest": "29.5.2",
     "@types/node": "20.3.1",
     "@types/supertest": "6.0.0",
+    "@variant/eslint-config": "workspace:*",
+    "@variant/typescript-config": "workspace:*",
     "jest": "29.5.0",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
