--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -11,17 +11,19 @@
   "dependencies": {
     "lucide-react": "0.376.0",
     "next": "14.2.3",
+    "next-intl": "3.17.2",
+    "next-themes": "0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@variant/eslint-config": "workspace:*",
     "@variant/tailwind-config": "workspace:*",
     "@variant/typescript-config": "workspace:*",
     "@variant/ui": "workspace:*",
-    "@types/node": "20.12.7",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
     "typescript": "5.4.5"
