--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@radix-ui/react-avatar": "1.1.0",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "lucide-react": "0.427.0",
@@ -14,11 +16,11 @@
     "tailwindcss-animate": "1.0.7"
   },
   "devDependencies": {
+    "@types/node": "20.12.8",
+    "@types/react": "18.3.1",
     "@variant/eslint-config": "workspace:*",
     "@variant/tailwind-config": "workspace:*",
     "@variant/typescript-config": "workspace:*",
-    "@types/node": "20.12.8",
-    "@types/react": "18.3.1",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.3",
@@ -32,6 +34,6 @@
   "exports": {
     "./globals.css": "./src/globals.css",
     "./lib/*": "./src/lib/*.ts",
-    "./components/*": "./src/components/*.tsx"
+    "./components/*": "./src/components/ui/*.tsx"
   }
 }
