--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -10,11 +10,11 @@
   },
   "dependencies": {
     "lucide-react": "0.376.0",
-    "next": "14.2.3",
+    "next": "15.0.0-rc.0",
     "next-intl": "3.17.2",
     "next-themes": "0.3.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react": "19.0.0-rc-f994737d14-20240522",
+    "react-dom": "19.0.0-rc-f994737d14-20240522"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
