--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -9,12 +9,14 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "ky": "1.5.0",
     "lucide-react": "0.376.0",
     "next": "15.0.0-rc.0",
     "next-intl": "3.17.2",
     "next-themes": "0.3.0",
     "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522"
+    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
