--- a/applications/frontend/tsconfig.json
+++ b/applications/frontend/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@variant/typescript-config/next.json",
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
   "compilerOptions": {
     "plugins": [
       {
@@ -8,7 +13,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "target": "ES2017"
   }
 }
