--- a/applications/backend/package.json
+++ b/applications/backend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nestjs/common": "10.0.0",
     "@nestjs/core": "10.0.0",
+    "@nestjs/jwt": "10.2.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.0.0",
     "@paralleldrive/cuid2": "2.2.2",
