--- a/applications/frontend/package.json
+++ b/applications/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "cookies-next": "4.2.1",
     "ky": "1.5.0",
     "lucide-react": "0.376.0",
     "next": "15.0.0-rc.0",
