--- a/applications/backend/package.json
+++ b/applications/backend/package.json
@@ -17,6 +17,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "10.0.0",
     "@paralleldrive/cuid2": "2.2.2",
+    "@prisma/client": "5.18.0",
     "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
@@ -35,6 +36,7 @@
     "@variant/eslint-config": "workspace:*",
     "@variant/typescript-config": "workspace:*",
     "jest": "29.5.0",
+    "prisma": "5.18.0",
     "source-map-support": "0.5.21",
     "supertest": "7.0.0",
     "ts-jest": "29.1.0",
